--- a/styles.css
+++ b/styles.css
@@ -7,3 +7,11 @@
 	margin: auto;
 	margin-top: 100px;
 }
+
+#time-slot{
+	height: 175px;
+	width: 500px;
+	background-color: grey;
+	margin: auto;
+	margin-top: 250px;
+}
